crates/loxide_interpreter/snapshots/eval/output/for_stmt_expect_bool.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: result
---
  × Expected boolean in condition expression
   ╭────
 1 │ for (var a = 0; 1; a = a + 1) {}
   ·                 ┬
   ·                 ╰── expect a boolean type here, but got type `number`
   ╰────
