crates/loxide_interpreter/snapshots/eval/output/invalid_binary.snap
---
source: crates/loxide_interpreter/tests/unittest.rs
expression: results
snapshot_kind: text
---
  × Invalid binary operand, expected: number
   ╭────
 1 │ true + 1;
   · ──┬─
   ·   ╰── expect a number type here
   ╰────


  × Incompatible operand, boolean is incompatible with number
   ╭────
 1 │ true != 1;
   · ──┬─    ┬
   ·   │     ╰── has type `number` here
   ·   ╰── has type `boolean` here
   ╰────
