crates/loxide_interpreter/snapshots/eval/output/invalid_unary.snap
---
source: crates/loxide_interpreter/tests/unittest.rs
expression: results
snapshot_kind: text
---
  × Invalid unary operand, expected: number
   ╭────
 1 │ -true ; // expected number
   ·  ──┬─
   ·    ╰── expect a number type here
   ╰────


  × Invalid unary operand, expected: boolean
   ╭────
 1 │ !1.0  ; // expected boolean
   ·  ─┬─
   ·   ╰── expect a boolean type here
   ╰────
