crates/loxide_interpreter/snapshots/eval/output/literal.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: annotated_eval_test(src)
---
123  ;
"abc";
true ;
false;
nil  ;
