crates/loxide_interpreter/snapshots/eval/output/valid_binary.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: annotated_eval_test(src)
---
2 >= 1; // true
2 > 1 ; // true
1 < 2 ; // true
1 <= 2; // true
2 - 1 ; // 1
0 + 1 ; // 1
2 / 1 ; // 2
0 * 2 ; // 0
1 == 1; // true
1 != 2; // true
"abc" == "abc" ; // true
"abc" != "abcd"; // true
