crates/loxide_interpreter/snapshots/eval/output/valid_unary.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: annotated_eval_test(src)
---
-1.0  ;
!true ;
!false;
