crates/loxide_interpreter/snapshots/eval/output/while_stmt_expect_bool.snap
---
source: crates/loxide_interpreter/src/eval.rs
expression: result
---
  × Expected boolean in condition expression
   ╭────
 1 │ while(1) { }
   ·       ┬
   ·       ╰── expect a boolean type here, got `number`
   ╰────
